--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "@angular/platform-browser": "~8.0.1",
     "@angular/platform-browser-dynamic": "~8.0.1",
     "@angular/router": "~8.0.1",
+    "@ckeditor/ckeditor5-angular": "^3.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^33.0.0",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "bootstrap": "^4.3.1",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ngx-pagination": "^5.1.1",
     "rxjs": "~6.4.0",
